# jdbg

./: .dockerignore  .gitignore  README.md  codecov.yml
.github/workflows/: docs.yml  integration-tests.yml  release.yml
cli/: Cargo.toml  build.rs
cli/src/: client.rs  completion.rs  config.rs  lib.rs  main.rs  output.rs
cli/src/commands/: breakpoint.rs  eval.rs  events.rs  exception.rs  exec.rs  frame.rs  mod.rs  server.rs  session.rs  source.rs  status.rs  thread.rs  var.rs
cli/tests/: breakpoint_tests.rs  eval_tests.rs  events_tests.rs  exception_tests.rs  execution_tests.rs  frame_tests.rs  integration_tests.rs  session_tests.rs  thread_tests.rs
cli/tests/common/: mod.rs
doc/: book.toml  custom.css
doc/src/: SUMMARY.md  intro.md
doc/src/commands/: breakpoints.md  eval.md  events.md  exceptions.md  exec.md  frames.md  server.md  session.md  status.md  threads.md  variables.md
doc/src/contributing/: index.md
doc/src/guide/: getting-started.md  installation.md  quickstart.md
doc/src/howto/: automation.md  debug-running-app.md  find-bug.md  index.md  multi-threaded.md
doc/src/reference/: architecture.md  completions.md  config.md  grpc-api.md
proto/: jdbg.proto
scripts/: build-all.sh  build-docs.sh  install.sh
server/: mvnw  mvnw.cmd  pom.xml
server/src/main/java/dev/jdbg/: ErrorCodes.java  JdbgException.java  Main.java
server/src/main/java/dev/jdbg/cli/: BaseCommand.java  JdbgCommand.java
test/: Dockerfile  README.md  TEST_PLAN.md  docker-compose.yml  entrypoint.sh  run-with-coverage.sh
test/test-target/: pom.xml
(+78 files in other folders)
